documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long HVL;
typedef unsigned long * LPHVL;
typedef unsigned long HPORT;
typedef unsigned long HSCHED;
typedef unsigned long * LPHSCHED;
typedef unsigned long * LPHSCHEDITEM;
typedef int BOOL;
typedef int * LPBOOL;
typedef int HCARD;
typedef int ERRVAL;
    typedef struct
    {
        BYTE data[6];
    } ADDRESS;
typedef ADDRESS * LPADDRESS;

AX1W32API ERRVAL __stdcall AX1_RPC_SdrWrL(ULONG data,ULONG addr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqClear(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqConfig(ULONG configval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqGetConfig(LPULONG pconfigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqRd(LPBYTE buf,LPULONG bufcount,LPINT reccount,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqSetConfig(ULONG configval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqSetMonitor(USHORT netid,USHORT vlid,BOOL bmonitor,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SeqStatus(LPUSHORT statusptr,LPULONG headptr,LPULONG tailptr,LPULONG configptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SubAddNoop(HSCHED hsub,BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SubAddPort(HSCHED hsub,HPORT hport,BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_SubAddRobin(HSCHED hsub,HSCHED hrobin,BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_Test1(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_Test2(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_Test3(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_Test4(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigClearBits(ULONG bits,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigGetVal(LPULONG trigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigSetBits(ULONG bits,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigSetVal(ULONG trigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_TrigSinkConfig(USHORT trigid,ULONG ctrlflags,ULONG ulComp,ULONG ulMask,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLConfig(ULONG configval,USHORT netid,USHORT vlid,ADDRESS macsrc,ULONG ipdst,ULONG ipsrc,ULONG bag,ULONG skewmax,LPHVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLConfigMAC(ULONG configval,USHORT netid,ADDRESS macdst,ADDRESS macsrc,ULONG ipdst,ULONG ipsrc,ULONG bag,ULONG skewmax,LPHVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetConfig(LPULONG pconfigval,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetFactor(LPINT pfactor0,LPINT pfactor1,LPINT pfactor2,LPINT pfactor3,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetHandle(USHORT netid,USHORT vlid,LPHVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetHandleMAC(USHORT netid,LPADDRESS pmacdst,LPHVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetInfo(HVL hvl,LPUSHORT vlid,LPADDRESS pmacdst,LPADDRESS pmacsrc,LPULONG pconfigval,LPULONG ipdst,LPULONG ipsrc,LPULONG bag_us,LPULONG skewmax,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetJitter(BOOL bReset,LPULONG pJitA,LPULONG pJitB,LPULONG pMaxJitA,LPULONG pMaxJitB,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetNext(USHORT netid,LPUSHORT nextVL,USHORT lastVL,USHORT flag,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetNextMAC(USHORT netid,LPADDRESS nextMAC,ADDRESS lastMAC,USHORT flag,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLGetPortCount(HVL hvl,LPUSHORT portcnt,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLSetConfig(ULONG configval,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_VLSetFactor(INT factor0,INT factor1,INT factor2,INT factor3,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedBuildEx(INT vlcount,LPBOOL vlrobins,LPHVL hvls,LPINT vlperiods_us,LPINT vlfactors,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedCalc(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedClear(USHORT netid,HCARD handleval);

AX1W32API VOID __stdcall AX1_SchedDebug(BOOL debug);

AX1W32API ERRVAL __stdcall AX1_SchedDoFrameEnd(ULONG frametime_us,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoFrameInsert(INT index,HSCHED hsub,HVL hvl,ULONG frametime_us,ULONG eventindex,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoFrameStart(ULONG frametime_us,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoRobinEnd(HSCHED hsub,HSCHED hrobin,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoRobinInsert(HSCHED hsub,HSCHED hrobin,INT index,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoRobinStart(LPHSCHED phsub,LPHSCHED phrobin,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSchedEnd(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSchedStart(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSubVLEnd(HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSubVLInsert(HSCHED hsub,LPHSCHED hrobins,ULONG eventindex,ULONG preveventindex,INT index,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedDoSubVLStart(LPHSCHED phsub,LPHSCHED hrobins,LPINT vlfactors,LPINT vlmods,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedFactor(LPHSCHED phsub,LPINT vlfactors,HVL hvl,HCARD handleval);

AX1W32API ULONG __stdcall AX1_SchedMaxval(LPULONG array,ULONG arraycount);

AX1W32API ULONG __stdcall AX1_SchedMinval(LPULONG array,ULONG arraycount);

AX1W32API VOID __stdcall AX1_SchedModval(LPINT vlfactors,LPINT vlmods);

AX1W32API INT __stdcall AX1_SeqDMARd(LPBYTE bufptr,LPULONG bufcountptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqDMARdEx(LPBYTE bufptr,LPULONG bufcountptr,LPINT reccountptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqGetConfig(LPULONG pconfigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqRdEx(LPBYTE bufptr,LPULONG bufcountptr,LPINT reccountptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqSetConfig(ULONG configval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqStatusEx(LPUSHORT statusptr,LPULONG headptr,LPULONG tailptr,LPULONG configptr,HCARD handleval);

AX1W32API ULONG __stdcall AX1_Shl(ULONG dataval,INT cntval);