documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32NET.VB

    Public Declare Function AX1_RPC_SdrWrL Lib "AX1W32.DLL" Alias "_AX1_RPC_SdrWrL@12" (ByVal data As Integer, ByVal addr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SeqClear Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqClear@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SeqConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqConfig@8" (ByVal configval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SeqGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqGetConfig@8" (ByRef pconfigval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SeqRd Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqRd@16" (ByRef buf As Byte, ByRef bufcount As Integer, ByRef reccount As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SeqSetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqSetConfig@8" (ByVal configval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SeqSetMonitor Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqSetMonitor@16" (ByVal netid As Short, ByVal vlid As Short, ByVal bmonitor As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SeqStatus Lib "AX1W32.DLL" Alias "_AX1_RPC_SeqStatus@20" (ByRef statusptr As Short, ByRef headptr As Integer, ByRef tailptr As Integer, ByRef configptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SubAddNoop Lib "AX1W32.DLL" Alias "_AX1_RPC_SubAddNoop@20" (ByVal hsub As Integer, ByVal bSkip As Integer, ByVal bShot As Integer, ByRef hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SubAddPort Lib "AX1W32.DLL" Alias "_AX1_RPC_SubAddPort@32" (ByVal hsub As Integer, ByVal hport As Integer, ByVal bSkip As Integer, ByVal bShot As Integer, ByVal bTxA As Integer, ByVal bTxB As Integer, ByRef hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_SubAddRobin Lib "AX1W32.DLL" Alias "_AX1_RPC_SubAddRobin@24" (ByVal hsub As Integer, ByVal hrobin As Integer, ByVal bSkip As Integer, ByVal bShot As Integer, ByRef hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_Test1 Lib "AX1W32.DLL" Alias "_AX1_RPC_Test1@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_Test2 Lib "AX1W32.DLL" Alias "_AX1_RPC_Test2@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_Test3 Lib "AX1W32.DLL" Alias "_AX1_RPC_Test3@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_Test4 Lib "AX1W32.DLL" Alias "_AX1_RPC_Test4@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_TrigClearBits Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigClearBits@8" (ByVal bits As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_TrigGetVal Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigGetVal@8" (ByRef trigval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_TrigSetBits Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigSetBits@8" (ByVal bits As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_TrigSetVal Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigSetVal@8" (ByVal trigval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_TrigSinkConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_TrigSinkConfig@20" (ByVal trigid As Short, ByVal ctrlflags As Integer, ByVal ulComp As Integer, ByVal ulMask As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_VLConfig@44" (ByVal configval As Integer, ByVal netid As Short, ByVal vlid As Short, ByVal macsrc As ADDRESS, ByVal ipdst As Integer, ByVal ipsrc As Integer, ByVal bag As Integer, ByVal skewmax As Integer, ByRef hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLConfigMAC Lib "AX1W32.DLL" Alias "_AX1_RPC_VLConfigMAC@48" (ByVal configval As Integer, ByVal netid As Short, ByVal macdst As ADDRESS, ByVal macsrc As ADDRESS, ByVal ipdst As Integer, ByVal ipsrc As Integer, ByVal bag As Integer, ByVal skewmax As Integer, ByRef hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetConfig@12" (ByRef pconfigval As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetFactor Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetFactor@24" (ByRef pfactor0 As Integer, ByRef pfactor1 As Integer, ByRef pfactor2 As Integer, ByRef pfactor3 As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetHandle Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetHandle@16" (ByVal netid As Short, ByVal vlid As Short, ByRef hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetHandleMAC Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetHandleMAC@16" (ByVal netid As Short, ByRef pmacdst As ADDRESS, ByRef hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetInfo@40" (ByVal hvl As Integer, ByRef vlid As Short, ByRef pmacdst As ADDRESS, ByRef pmacsrc As ADDRESS, ByRef pconfigval As Integer, ByRef ipdst As Integer, ByRef ipsrc As Integer, ByRef bag_us As Integer, ByRef skewmax As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetJitter Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetJitter@28" (ByVal bReset As Integer, ByRef pJitA As Integer, ByRef pJitB As Integer, ByRef pMaxJitA As Integer, ByRef pMaxJitB As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetNext Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetNext@20" (ByVal netid As Short, ByRef nextVL As Short, ByVal lastVL As Short, ByVal flag As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetNextMAC Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetNextMAC@24" (ByVal netid As Short, ByRef nextMAC As ADDRESS, ByVal lastMAC As ADDRESS, ByVal flag As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLGetPortCount Lib "AX1W32.DLL" Alias "_AX1_RPC_VLGetPortCount@12" (ByVal hvl As Integer, ByRef portcnt As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLSetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_VLSetConfig@12" (ByVal configval As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_VLSetFactor Lib "AX1W32.DLL" Alias "_AX1_RPC_VLSetFactor@24" (ByVal factor0 As Integer, ByVal factor1 As Integer, ByVal factor2 As Integer, ByVal factor3 As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedBuildEx Lib "AX1W32.DLL" Alias "_AX1_SchedBuildEx@28" (ByVal vlcount As Integer, ByRef vlrobins As Integer, ByRef hvls As Integer, ByRef vlperiods_us As Integer, ByRef vlfactors As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedCalc Lib "AX1W32.DLL" Alias "_AX1_SchedCalc@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedClear Lib "AX1W32.DLL" Alias "_AX1_SchedClear@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Sub AX1_SchedDebug Lib "AX1W32.DLL" Alias "_AX1_SchedDebug@4" (ByVal debug As Integer)
    Public Declare Function AX1_SchedDoFrameEnd Lib "AX1W32.DLL" Alias "_AX1_SchedDoFrameEnd@12" (ByVal frametime_us As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoFrameInsert Lib "AX1W32.DLL" Alias "_AX1_SchedDoFrameInsert@28" (ByVal index As Integer, ByVal hsub As Integer, ByVal hvl As Integer, ByVal frametime_us As Integer, ByVal eventindex As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoFrameStart Lib "AX1W32.DLL" Alias "_AX1_SchedDoFrameStart@12" (ByVal frametime_us As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoRobinEnd Lib "AX1W32.DLL" Alias "_AX1_SchedDoRobinEnd@16" (ByVal hsub As Integer, ByVal hrobin As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoRobinInsert Lib "AX1W32.DLL" Alias "_AX1_SchedDoRobinInsert@20" (ByVal hsub As Integer, ByVal hrobin As Integer, ByVal index As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoRobinStart Lib "AX1W32.DLL" Alias "_AX1_SchedDoRobinStart@16" (ByRef phsub As Integer, ByRef phrobin As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoSchedEnd Lib "AX1W32.DLL" Alias "_AX1_SchedDoSchedEnd@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoSchedStart Lib "AX1W32.DLL" Alias "_AX1_SchedDoSchedStart@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoSubVLEnd Lib "AX1W32.DLL" Alias "_AX1_SchedDoSubVLEnd@8" (ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoSubVLInsert Lib "AX1W32.DLL" Alias "_AX1_SchedDoSubVLInsert@28" (ByVal hsub As Integer, ByRef hrobins As Integer, ByVal eventindex As Integer, ByVal preveventindex As Integer, ByVal index As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedDoSubVLStart Lib "AX1W32.DLL" Alias "_AX1_SchedDoSubVLStart@24" (ByRef phsub As Integer, ByRef hrobins As Integer, ByRef vlfactors As Integer, ByRef vlmods As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedFactor Lib "AX1W32.DLL" Alias "_AX1_SchedFactor@16" (ByRef phsub As Integer, ByRef vlfactors As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedMaxval Lib "AX1W32.DLL" Alias "_AX1_SchedMaxval@8" (ByRef array As Integer, ByVal arraycount As Integer) As Integer
    Public Declare Function AX1_SchedMinval Lib "AX1W32.DLL" Alias "_AX1_SchedMinval@8" (ByRef array As Integer, ByVal arraycount As Integer) As Integer
    Public Declare Sub AX1_SchedModval Lib "AX1W32.DLL" Alias "_AX1_SchedModval@8" (ByRef vlfactors As Integer, ByRef vlmods As Integer)
    Public Declare Function AX1_SeqDMARd Lib "AX1W32.DLL" Alias "_AX1_SeqDMARd@12" (ByRef bufptr As Byte, ByRef bufcountptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqDMARdEx Lib "AX1W32.DLL" Alias "_AX1_SeqDMARdEx@16" (ByRef bufptr As Byte, ByRef bufcountptr As Integer, ByRef reccountptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqGetConfig Lib "AX1W32.DLL" Alias "_AX1_SeqGetConfig@8" (ByRef pconfigval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqRdEx Lib "AX1W32.DLL" Alias "_AX1_SeqRdEx@16" (ByRef bufptr As Byte, ByRef bufcountptr As Integer, ByRef reccountptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqSetConfig Lib "AX1W32.DLL" Alias "_AX1_SeqSetConfig@8" (ByVal configval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqStatusEx Lib "AX1W32.DLL" Alias "_AX1_SeqStatusEx@20" (ByRef statusptr As Short, ByRef headptr As Integer, ByRef tailptr As Integer, ByRef configptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_Shl Lib "AX1W32.DLL" Alias "_AX1_Shl@8" (ByVal dataval As Integer, ByVal cntval As Integer) As Integer
